# nncg

./: .gitignore  CMakeLists.txt  README.md  buttons.cpp  buttons.h  common.h  csv.cpp  csv.h  icons.rc  last_ver.md5  last_ver.txt  main.cpp  mwindow.cpp  mwindow.h  nncg.pro  nncg.qrc  settings.cpp  settings.h  table.cpp  table.h  template.cpp  template.h  template_example.txt  updater.cpp  updater.h  validators.cpp  validators.h  values_example.csv
